enumerate hid devices remove old build arguments small fixes